add SDG title and necessary buttons

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,14 +7,37 @@
         <div class="row text-center">
             <div class="col-md-2"></div>
             <div class="col-md-8 border border-dark card-body rounded-pill">
-                mockup
+                <H2> SDG 2: No Hunger.</H2>
             </div>
             <div class="col-md-2"></div>
         </div>
     </div>
-
-<div class="container-md p-4 border border-dark rounded-pill my-6">
-    second container
+    <div class="container-md p-4 border border-dark rounded my-4">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h4> Overzicht Items. </h4>
+                <p>Overzicht van alle afgekorte items.</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <a class="btn btn-dark w-100 h-100 rounded-pill fs-4 d-flex justify-content-center align-items-center"
+                   type="button"><i class="bi bi-play"></i></a>
+            </div>
+        </div>
+    </div>
+    <div class="container-md p-4 border border-dark rounded my-4">
+        <div class="row text-center">
+            <div class="col-md-4">
+                <h4> Kortingen in jouw regio. </h4>
+                <p>Overzicht van kortingen in jouw Regio.</p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <a class="btn btn-dark w-100 h-100 rounded-pill fs-4 d-flex justify-content-center align-items-center"
+                   type="button"><i class="bi bi-play"></i></a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </html>
