adds Tablepage.html met zijn bestemde controller en werkende knoppen fr

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <a class="btn btn-dark w-100 h-100 rounded-pill fs-4 d-flex justify-content-center align-items-center"
-                   type="button"><i class="bi bi-play"></i></a>
+                   th:href="@{/table}" type="button"><i class="bi bi-play"></i></a>
             </div>
         </div>
     </div>
@@ -38,6 +38,5 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 </html>
