--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,7 +13,7 @@
     <div class="container-fluid justify-content-center">
         <ul class="navbar-nav justify-content-center">
             <li class="nav-item p-2 fs-3">
-                <a class="nav-link" href="#"><i class="bi bi-house"></i></a>
+                <a class="nav-link" th:href="@{/home}"><i class="bi bi-house"></i></a>
             </li>
             <li class="nav-item p-2 fs-3">
                 <a class="nav-link" href="#"><i class="bi bi-currency-euro"></i></a>
