--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <div class="container-md p-6 border border-dark rounded my-4">
         <div class="row text-center">
             <div class="col-md-2"></div>
-            <div class="col-md-8 border border-dark card-body rounded-pill">
+            <div class="col-md-8 border border-dark card-body rounded">
                 <H2> SDG 2: No Hunger.</H2>
             </div>
             <div class="col-md-2"></div>
