--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,7 +19,7 @@
                 <a class="nav-link" href="#"><i class="bi bi-currency-euro"></i></a>
             </li>
             <li class="nav-item p-2 fs-3">
-                <a class="nav-link" href="#"><i class="bi bi-table"></i></a>
+                <a class="nav-link" th:href="@{/Regio}"><i class="bi bi-table"></i></a>
             </li>
         </ul>
     </div>
