added regio page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <div class="row text-center">
             <div class="col-md-4">
                 <h4> Overzicht Items. </h4>
-                <p>Overzicht van alle afgekorte items.</p>
+                <p>Overzicht van afgekorte items.</p>
             </div>
             <div class="col-md-4"></div>
             <div class="col-md-4">
