--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom justify-content-center">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom justify-content-center"
+     style="background-color: #d9d9d9;">
     <div class="container-fluid justify-content-center">
         <ul class="navbar-nav justify-content-center">
             <li class="nav-item p-2 fs-3">
