adds database link possibility

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 
 <div layout:fragment="content">
     <div class="container-md p-6 border border-dark rounded my-4">
+        <img alt="SDG 2" class="border border-dark rounded" src="/images/SDG%202.jpg"
+             style="height:120px;">
         <div class="row text-center">
             <div class="col-md-2"></div>
 
@@ -11,9 +13,9 @@
 
                 <!-- Titel + afbeelding naast elkaar -->
                 <div class="d-flex align-items-center mb-2">
+
                     <h1 class="me-3 mb-0">Boodsch(App)</h1>
-                    <img src="/images/SDG%202.jpg" class="border border-dark rounded" alt="SDG 2"
-                         style="height:100px;">
+
                 </div>
 
                 <!-- Subtitel -->
