--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,7 +17,7 @@
                 <a class="nav-link" th:href="@{/home}"><i class="bi bi-house"></i></a>
             </li>
             <li class="nav-item p-2 fs-3">
-                <a class="nav-link" href="#"><i class="bi bi-currency-euro"></i></a>
+                <a class="nav-link" th:href="@{/product/{id}/stores}"><i class="bi bi-currency-euro"></i></a>
             </li>
             <li class="nav-item p-2 fs-3">
                 <a class="nav-link" href="#"><i class="bi bi-table"></i></a>
