--- a/src/main/resources/templates/Product-stores.html
+++ b/src/main/resources/templates/Product-stores.html
@@ -1,25 +1,67 @@
-<div class="container mt-4">
 
-    <h2>
-        Winkels voor: <span th:text="${product.naam}"></span>
-    </h2>
+<!doctype html>
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Document</title>
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" rel="stylesheet">
+</head>
 
-    <table class="table table-bordered mt-3">
-        <thead>
-        <tr>
-            <th>Winkel</th>
-            <th>Locatie / Regio</th>
-            <th>Type</th>
-        </tr>
-        </thead>
+    <div class="container mt-5">
 
-        <tbody>
-        <tr th:each="store : ${stores}">
-            <td th:text="${store.naam}"></td>
-            <td th:text="${store.locatie}"></td>
-            <td th:text="${store.type}"></td>
-        </tr>
-        </tbody>
-    </table>
+        <div class="card shadow-lg border-0 rounded-4 p-4">
+
+            <h2 class="fw-bold mb-4">
+                Winkels voor: <span th:text="${product.naam}"></span>
+            </h2>
+
+            <table class="table table-hover table-striped align-middle">
+                <thead class="table-dark">
+                <tr>
+                    <th>Winkel</th>
+                    <th>Locatie / Regio</th>
+                    <th>Type</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                <tr th:each="store : ${stores}">
+                    <td class="fw-semibold" th:text="${store.naam}"></td>
+                    <td th:text="${store.locatie}"></td>
+                    <td th:text="${store.type}"></td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+
+    </div>
 
 </div>
+
+<body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom justify-content-center"
+     style="background-color: #d9d9d9;">
+    <div class="container-fluid justify-content-center">
+        <ul class="navbar-nav justify-content-center">
+            <li class="nav-item p-2 fs-3">
+                <a class="nav-link" th:href="@{/home}"><i class="bi bi-house"></i></a>
+            </li>
+            <li class="nav-item p-2 fs-3">
+                <a class="nav-link" th:href="@{/product/{id}/stores}"><i class="bi bi-currency-euro"></i></a>
+            </li>
+            <li class="nav-item p-2 fs-3">
+                <a class="nav-link" href="#"><i class="bi bi-table"></i></a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid p-6" layout:fragment="content">
+    <p></p>
+</div>
+
+</body>
+</html>
