--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <a class="btn btn-dark w-100 h-100 rounded-pill fs-4 d-flex justify-content-center align-items-center"
-                   type="button">
+                   th:href="@{/regio}" type="button">
                     <i class="bi bi-play"></i>
                 </a>
 
