--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <a class="btn btn-dark w-100 h-100 rounded-pill fs-4 d-flex justify-content-center align-items-center"
-                   th:href="@{/Table}" type="button"><i class="bi bi-play"></i></a>
+                   th:href="@{/Tablepage}" type="button"><i class="bi bi-play"></i></a>
             </div>
         </div>
     </div>
